new blockade: loan in night is not allowed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ properties.maxTermMonth=360
 properties.minTermMonth=120
 properties.extendMonth=24
 properties.interest=10
+properties.startNight=0
+properties.endNight=6
